Hotfix/fix input screen validation missing (#39)
* update validate customer journey

* bumbed up the version

* set validator to empy dict if its missing

* bumbed version

* set validator to empy dict if its missing

* bumbed version

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,3 +15,9 @@ Version 0.0.1.6
 ----------------
 Enhancement
 - validate_ussd_journey command to fail if customer journey fails validation
+
+Version 0.0.1.7
+-----------------
+
+BugFix
+- if validation in input screen is missing proceed don't fail
