Hotfix/installation failing (#43)
* fixed installation bug by including default.txt requirements

* bumped up the version

--- a/ChangeLog
+++ b/ChangeLog
@@ -34,3 +34,10 @@ Version 0.0.1.9
 
 Bug fix
     - previous version fails when installing
+
+
+Version 0.0.1.9.1
+-----------------
+
+Bug fix
+    - previous version fails when installing
