--- a/ChangeLog
+++ b/ChangeLog
@@ -60,3 +60,9 @@ Version 0.0.1.9.4
 
 Bug fix
     - adding missing package 'yaml' in the dependencies list.
+
+Version 0.0.1.9.5
+-----------------
+
+Bug fix
+    - adding missing package 'yaml' in the dependencies list.
