--- a/ChangeLog
+++ b/ChangeLog
@@ -85,3 +85,9 @@ Version 0.0.1.9.8
 
 Bug fix
     - fixed sample customer journey
+
+Version 0.0.1.9.9
+-----------------
+
+Feature
+    - ussd screens path can be relative
