--- a/ChangeLog
+++ b/ChangeLog
@@ -108,3 +108,9 @@ Version 0.0.2.3
 ---------------
 Enhancement
     - http screen should save status_code and content
+
+Version 0.0.2.4
+---------------
+Bugfix
+    - fixed backward incompatibility introduced by previous version
+      in http_screen.
