--- a/ChangeLog
+++ b/ChangeLog
@@ -147,3 +147,9 @@ Version 0.0.3
 ---------------
 Bug fix
     - http screen with non json response failing.
+
+Version 0.0.3.1
+---------------
+Feature
+    - added inheritance support on ussd customer journey
+
