--- a/ChangeLog
+++ b/ChangeLog
@@ -153,3 +153,9 @@ Version 0.0.3.1
 Feature
     - added inheritance support on ussd customer journey
 
+
+Version 0.0.3.2
+---------------
+Feature
+    - add screen that can save something in the session.
+
