--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 Ussd Airflow Changelog
 ================
 
+Version 0.0.3.5
+---------------
+Bug fix
+    - loading variable template failing on some instance
+
 Version 0.0.3.4
 ---------------
 
