--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Ussd Airflow Changelog
-================
+======================
+
+Version 0.0.3.6
+---------------
+Bug fix
+    - error as a result of copying unsave variable
 
 Version 0.0.3.5
 ---------------
