Feature/use jinja evaluate when making request (#99)
* changed http screen to use jinja2 compile expression

* fixed a typo

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@ Ussd Airflow Changelog
 Version 0.0.4.2
 -----------------
 Feature
-    - adding option for adding buit in function
+    - adding option for adding built in function
 
 Version 0.0.4.1
 -----------------
