--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Ussd Airflow Changelog
 ======================
+Version 0.0.4.3
+-----------------
+feature
+    - next screen can now have routing options
 
 Version 0.0.4.3
 -----------------
