--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 Ussd Airflow Changelog
 ======================
 
+Version 0.0.4.8
+-----------------
+Feature
+    - Adding feature for customizing index format
+
 Version 0.0.4.6
 -----------------
 Feature
