bumb up version

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 Ussd Airflow Changelog
 ======================
 
+Version 0.0.4.9
+-----------------
+Feature
+    - Adding function screen format.
+
 Version 0.0.4.8
 -----------------
 Feature
